bochs (2.3.6-2) UNRELEASED; urgency=low

  * Try to use pkg-config before AC_PATH_XTRA. Add pkg-config to
    Build-Depends.
    - debian/patches/patches/20_use_pkg-config.patch: New file.

 -- Guillem Jover <guillem@debian.org>  Thu, 24 Jan 2008 02:40:09 +0200

bochs (2.3.6-1) unstable; urgency=low

  * New upstream release.
    - debian/patches/00_base.patch: Sync.
    - debian/patches/01_build.patch: Likewise.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_qemu_bios.patch: Likewise.
    - debian/patches/10_enable_iasl.patch: Likewise.
  * Do no use obsolete --enable-save-restore configure option.
  * Add armel to libasound2-dev architecture specifier in Build-Depends.
    Thanks to Joey Hess <joeyh@debian.org> for noticing.
  * Add hppa to libasound2-dev architecture specifier in Build-Depends.

 -- Guillem Jover <guillem@debian.org>  Wed, 23 Jan 2008 10:10:19 +0200

bochs (2.3.5-1) unstable; urgency=low

  * New upstream release.
    - debian/patches/01_man.patch: Fixed upstream. Remove.
    - debian/patches/03_redolog_FTBFS.patch: Likewise.
    - debian/patches/05_64_bit_cleanliness.patch: Likewise.
    - debian/patches/00_base.patch: Sync.
  * Remove versioned Build-Depends on dpkg, which is already on stable.
  * Remove Tag fields, they are better maintainer outside the package.
  * Improve tarball.sh to support cleaning upstream tarballs, and document
    its usage in README.Debian.
  * Turn failures when creating the tun device file non-fatal.
  * Add Homepage, Vcs-Browser and Vcs-Svn fields in debian/control.
  * Call configure with autotools-dev recommended --build and --host options.
  * Build-Depend on iasl and enable it to build acpi-dsdt.hex.
  * Ship BIOS-bochs-legacy in bochsbios.
  * Fix parallel FTBFS and jobserver warnings.
    - debian/patches/01_build.patch: New file.
  * Do not directly use the QA SourceForge redirector, instead use an URL
    to sf.net. (Closes: #453546)